# cookiecutter-nk-fastapi

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/common/: containers.py  middlewares.py  routes.py
{{cookiecutter.project_slug}}/common/config/: __init__.py  cors.py  database.py
{{cookiecutter.project_slug}}/common/errors/: __init__.py  handler.py
{{cookiecutter.project_slug}}/common/middlewares/: log.py
{{cookiecutter.project_slug}}/common/resources/: .env.prod  .env.test
{{cookiecutter.project_slug}}/common/utils/api/: __init__.py  template.py
{{cookiecutter.project_slug}}/dockerfiles/: manager_dev.Dockerfile  manager_prod.Dockerfile  service_dev.Dockerfile  service_prod.Dockerfile
{{cookiecutter.project_slug}}/manager/: run.py
{{cookiecutter.project_slug}}/manager/src/: app.py  asgi.py  containers.py
{{cookiecutter.project_slug}}/manager/tests/: __init__.py
{{cookiecutter.project_slug}}/manager/tests/units/api/: __init__.py
{{cookiecutter.project_slug}}/service/: run.py
{{cookiecutter.project_slug}}/service/src/: app.py  asgi.py  containers.py
{{cookiecutter.project_slug}}/service/tests/integration/: __init__.py
{{cookiecutter.project_slug}}/service/tests/units/api/: __init__.py
{{cookiecutter.project_slug}}/service/tests/units/repositories/: __init__.py
{{cookiecutter.project_slug}}/shared/config/: __init__.py
{{cookiecutter.project_slug}}/shared/errors/: __init__.py  handler.py
{{cookiecutter.project_slug}}/worker/: uvicorn.py
